--- a/booking.html
+++ b/booking.html
@@ -103,7 +103,8 @@
                         <input type="button" value="Download" class="btn btn-primary rounded w-lg btn-lg my-1" onclick="return f2()">
                         <button onclick="downloadFile()" class="btn btn-primary rounded w-lg btn-lg my-1">Download1</button>
 
-                        <embed id="pdf_file" src="" type="application/pdf" width="97%"  height="400px"  />
+                        <embed id="pdf_file" src="2.pdf" type="application/pdf" width="97%"  height="400px"  />
+                        <iframe src="2.pdf" width="50%" height="500px"></iframe>
                     </form>
                 </div>            
 
