--- a/unpaid.html
+++ b/unpaid.html
@@ -64,10 +64,10 @@
             <div class="form" >
                 <center>
 
-                <h6 class="section-title mb-4">ولي الأمر الكريم نعتذر لكم عن حجب شهادة ابنكم </h6>
-                <h6 class="section-title mb-4">ونأكد أنه حجب الشهادات يكون عن طريق الادارة المالية</h6>
-                <h6 class="section-subtitle">نرجو منكم التكرم بمراجعة قسم القبول والتسجيل في أقرب وقت ممكن لإتمام عملية السداد</h6>
 
+                <h6 class="section-title mb-4">للحصول على الشهادة نرجو منكم التكرم بالتواصل قسم القبول والتسجيل       </h6>
+                <h6 class="section-title mb-4">على الرقم التالي 0595899384     </h6>
+                <h3>أو الضغط على الرابط للتواصل عبر الواتس</h2> <h3><a target="_blank" href="https://wa.me/+966595899384">click here</a></h3>
                     
 
                     <div class="buttons text-center">
