--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <center>
                 <h6 class="section-title mb-4">شريك النجاح ولي الأمر الكريم</h6>
                 <h6 class="section-title mb-4">نبارك لأنفسنا ولكم نجاح أبنائنا الطلاب العام الدراسي 2024-2025</h6>
-                <h6 class="section-title mb-4">ونقدم لكم هذا الموقع لسهولة الحصول على شهادات أبنائنا الطلاب</h6>
-                <h6 class="section-subtitle">كل ما عليك فعله هو كتابة رقم إقامة الطالب والضغط على عرض الشهادة</h6>
+                <h6 class="section-title mb-4">للحصول على نتيجة الفصل الدراسي الأول</h6>
+                <h6 class="section-subtitle">الرجاء إدخال  رقم إقامة الطالب والضغط على عرض الشهادة</h6>
                 <form name="form1">
                     <div class="form-group">
                         <input type="text" class="form-control form-control-lg" id="ID_number"
