--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                     <h6 class="section-subtitle">البيانات المدخلة غير صحيحة</h6>
                     <h6 class="section-subtitle">تم حجب النتيجة لعدم سداد الرسوم</h6>
                     <h6 class="section-subtitle"> كتابة الأرقام باللغة العربية</h6>
+                    <h6 class="section-subtitle" style="color: rgb(126, 0, 0);">في حال مواجهة أي مشكلة فنية الرجاء التواصل مع مستر أحمد العجيري واتس عبر الرقم التالي </h6>
+                    <h3>0531618411</h2> <h3><a target="_blank" href="https://wa.me/+966531618411">click here</a></h3>
 
                 </form>
             </div>
