--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <header class="headerabout">
         <div class="overlay">
             <h1 class="title">مدارس رحاب المعرفة المسار المصري</h1>
-            <h6 class="subtitle">شهادات الفصل الدراسي الأول العام الدراسي 2024-2025</h6>
+            <h6 class="subtitle"></h6>
         </div>
     </header>
     <!-- End Of Page Header -->
@@ -63,9 +63,7 @@
             
             <div class="form" >
                 <center>
-                <h6 class="section-title mb-4">شريك النجاح ولي الأمر الكريم</h6>
-                <h6 class="section-title mb-4">نبارك لأنفسنا ولكم نجاح أبنائنا الطلاب العام الدراسي 2024-2025</h6>
-                <h6 class="section-title mb-4">للحصول على نتيجة الفصل الدراسي الأول</h6>
+
                 <h6 class="section-subtitle">الرجاء إدخال  رقم إقامة الطالب والضغط على عرض الشهادة</h6>
                 <form name="form1">
                     <div class="form-group">
@@ -81,7 +79,6 @@
                 <br><hr>
                     <h6 class="section-subtitle" style="color: rgb(126, 0, 0);">قد لا تظهر الشهادة لأحد الأسباب التالية</h6>
                     <h6 class="section-subtitle">البيانات المدخلة غير صحيحة</h6>
-                    <h6 class="section-subtitle">تم حجب النتيجة لعدم سداد الرسوم</h6>
                     <h6 class="section-subtitle"> كتابة الأرقام باللغة العربية</h6>
                     <h3 class="section-subtitle" style="color: rgb(126, 0, 0);">في حال مواجهة أي مشكلة فنية الرجاء التواصل مع مستر أحمد العجيري واتس عبر الرقم التالي <a target="_blank" href="https://wa.me/+966532603419">0532603419</a></h3>
 
